v2.9.9   - Added stereo interlaced, interlaced columns and 
	   checkerboard.
	 - Fixed color queries to support stereo interlaced and
	   checkerboard.
	 - Added saving and loading of stereo images in reels.
	 - Added youtube videos to documentation.

v2.9.8   - Bug fixed OpenEXR reader for multipart image files that
	   are not stereo images.  Previously the files would show
	   the first part only.
	 - The new audio sync was failing on VOBs.  Changed it to
	   make it work.
	 - The win32 release was crashing on file requester due
	   to wrong ffmpeg libraries.  Fixed.

v2.9.7   - Allowed command-line loading of stereo images/movies
	   without any prefix.  The syntax is using the -s keyword:

	   	   mrViewer -s leftimage.1.exr -s rightimage.1.exr

         - Updated media information's value and sliders to trigger
	   an update of the slider if the value is typed in.
	 - Added license and configuration information of ffmpeg
	   to the About window.
	 - Reverted an audio optimization which would create problems
	   in audio playback when loops happened early and audio
	   packets decoded into multiple frames.
	 - Reverted a video optimization which was creating problems
	   in reverse playback.
	 - Improved video playback when scrubbing which was skipping
	   some frames incorrectly.  This change should remove all
	   warnings of missing video frames.
	 - Improved audio sync after seeks and in normal mode for
	   Linux and Windows64.
	 - Bug fixed adjusting of EDL when stereo was on.
	 - Made music only tracks not report an invalid index for
	   channel selection.
	 - Removed stereo interlaced as it was not working properly.
	 - Bug fixed unshown frames counter when playing backwards.

v2.9.6   - Made channel selection work with toggles more intuitively.
	   Going to N.x with a 'r' hotkey and then pressing 'r' 
	   again will bring you back to "N", not "Color" as before.
	 - Made channel selection smarter to avoid reloads when